- add clear file api - ts support import json - update config with dot env
